# dnd_lib

./: .gitignore  README.md  dnd_lib.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml
data/2014/: 5e-SRD-Characters.json  5e-SRD-Monsters.json  5e-SRD-Spells.json
data/2014_es/: 5e-SRD-Monsters-ES.json
data/5etools/: 5etools_feats.json  5etools_items.json  5etools_monsters.json  5etools_spells.json  t.json
scripts/: build.py  create_icons.py  migrate_customs.py
src/dnd_lib/: __init__.py  app.py  convert_5etools.py  tray.py
src/dnd_lib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dnd_lib/static/css/: style.css
src/dnd_lib/static/js/: app.js
src/dnd_lib/templates/: index.html
